cmake_minimum_required(VERSION 2.6)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})

project(nfignore)


set(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost 1.35 REQUIRED thread regex)

set(DETOURS_FIND_REQUIRED true)
FIND_PACKAGE(Detours)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${DETOURS_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS} ${DETOURS_LIBRARY_DIR})

add_executable(nfignore NFIgnore/main.cpp)
add_library(hook SHARED hook/dllmain.cpp)

target_link_libraries(hook ${Boost_LIBRARIES} ${DETOURS_LIBRARY})
target_link_libraries(nfignore ${Boost_LIBRARIES})


set(install_dir ${CMAKE_INSTALL_PREFIX})
message("${DETOURS_DLL}")

INSTALL(TARGETS nfignore hook DESTINATION  . )
INSTALL(FILES ignore_phrases.txt ignore_users.txt ${DETOURS_DLL} DESTINATION . )

set(CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS_SKIP TRUE )
INCLUDE(InstallRequiredSystemLibraries)
INSTALL(FILES ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION . )


SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "NFIgnore")
SET(CPACK_PACKAGE_VENDOR "Brian Hoffman")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ReadMe.txt")

SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_FILE_NAME "nfignore-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")

SET(CPACK_GENERATOR "ZIP")
INCLUDE(CPack)